Agrega estilos a la sección más motivos para unirte

--- a/style.css
+++ b/style.css
@@ -19,42 +19,33 @@
 }
 
 body{
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: space-between;
-    gap: 2rem;
-
     font-family: Helvetica, sans-serif, Arial; 
     font-size: 16px; 
     line-height: 1.5;
     color: var(--font-color);
+    text-size-adjust: 60%;
 
     background-color: var(--background-color); 
 }
 
 header{
-    padding: 1rem; 
-    width: 100%; 
-    height: 52rem; 
-
-    display: flex; 
-    flex-direction: column; 
-    flex-wrap: wrap;
-    align-items: center; 
-    justify-content: space-around;
-    gap: 1rem; 
-
-    position: relative;
-    top: 0; 
-    left: 0; 
-
-
-    overflow: hidden;
 }
 
 .hero-img{
     width: 100%;
+    height: 55rem;  
+
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    z-index: -1000;
+
+    background-image: url(./imgs/hero-img.jpg);
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    opacity: 0.5;
+
+    /*width: 100%;
     height: 52rem; 
     
     position: absolute; 
@@ -65,55 +56,75 @@ header{
     background-image: url(./imgs/hero-img.jpg);
     background-size: cover; 
     background-repeat: no-repeat; 
-    opacity: 0.5; 
+    opacity: 0.5;*/
 }
+
+.header-container{
+    width: 100%; 
+    height: 55rem; 
+
+    position: relative; 
+    top: 0; 
+    left: 0;
+}
+
+.header-content{
+    margin: auto;
+    width: 100%;
+    height: 55rem;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    position: absolute; 
+    top: 0; 
+    left: 0;
+}
+
 
 .nav-bar{
     width: 100%;
 
     display: flex; 
     flex-direction: row;
-    align-items: flex-start; 
+    align-items: space-between; 
     justify-content: space-between; 
-
-
-
-    position: absolute; 
-    top: 0; 
-    left: 0;
-    z-index: 1000; 
 }
 
 
 .logo{
-    margin-left: 10rem;
-    padding: 0.25rem 3rem;  
+    margin-left: 22rem;
+  
     
-    width: 220px; 
+    width: 180px;
 }
 
 .nav-menu{
+    margin-right: 20rem;
+
     display: flex; 
     align-items: center; 
     justify-content: space-around; 
     gap: 1rem; 
-    
-    list-style: none; 
+
+    list-style: none;
 }
 
 .language-select{
-    margin: 2rem; 
+    /*margin: 2rem; 
     margin-right: 0.5rem; 
-    padding: 100rem;
+    padding: 100rem;*/
 }
 
 .log-in-button{
-    margin: 2rem; 
-    margin-right: 15rem; 
     padding: 0.7rem 1.2rem; 
     border-radius: 5px;
     
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: bold; 
     color: var(--font-color);
     text-decoration: none; 
@@ -123,28 +134,14 @@ header{
     cursor: pointer; 
 }
 
-.hero{
-    width: 100%; 
-    position: absolute; 
-    z-index: 1000; 
-
-    display: flex; 
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center;
-
-    font-size: 1.2rem; 
-    text-align: center; 
-}
 
 .hero{
-    width: 40%; 
-
-    position: absolute; 
-    top: 10rem; 
-    z-index: 1000;
+    margin: auto; 
+    margin-top: 10rem;
+    width: 35%;
 
     font-size: 1.5rem; 
+    text-align: center;
 }
 
 h1{
@@ -154,10 +151,6 @@ h1{
 
 .join-now{
     width: 40%;
-
-    position: absolute;
-    top: 32rem; 
-    z-index: 1000;
     
     font-size: 1.2rem; 
     text-align: center;
@@ -173,12 +166,12 @@ h1{
 }
 
 .join-now-button{
-    padding: 1.5rem 2rem; 
+    padding: 1rem 2rem; 
     border-style: none;
     border-radius: 5px;
     
     
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold; 
     color: var(--font-color);
     text-decoration: none; 
@@ -189,7 +182,7 @@ h1{
 }
 
 .email-search-bar{
-    padding: 1.5rem 6rem; 
+    padding: 1rem 9rem; 
     border: solid 1px var(--emphasis-color2); 
     border-radius: 5px;
     
@@ -207,10 +200,10 @@ h1{
 }
 
 .more-info{
-    margin: auto; 
+    margin: 1rem auto; 
     padding: 0.8rem 1.5rem; 
     border-radius: 20px; 
-    width: 50%;
+    width: 60%;
 
     display: flex; 
     align-items: center;
@@ -228,7 +221,7 @@ h1{
     align-items: flex-start; 
     justify-content: center; 
     
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .more-info-button{
@@ -236,7 +229,7 @@ h1{
     border-style: none;
     border-radius: 5px;
     
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold; 
     color: var(--font-color);
     text-decoration: none; 
@@ -248,15 +241,16 @@ h1{
 
 .tendencies{
     margin: 1.5rem auto;
-    width: 50%; 
+    width: 60%;
 
     display: flex; 
     flex-direction: column;
     align-items: flex-start;
 }
 
-.tendencies h2{
+h2{
     margin: 1.5rem 0; 
+
     font-size: 2rem; 
 }
 
@@ -268,14 +262,12 @@ h1{
 .tendencies-cards-container{
     margin: auto; 
     width: 100%;
-
     display: flex;
-    gap: 2rem; 
     overflow-x: auto; 
 }
 
 .tendency-card{
-    padding: 2rem; 
+    padding: 1rem; 
 
 
     position: relative; 
@@ -292,16 +284,39 @@ h1{
 .tendency-card-num{
     position: absolute; 
     bottom: 2.5rem; 
-    left: 1rem;
+    left: 0.1rem;
     z-index: 1000;
 
     font-size: 6rem;
     font-weight: bold;
-    color: var(--font-color);
-    -webkit-text-stroke: 2px var(--font-color2);
+    color: var(--font-color2);
+    -webkit-text-stroke: 2px var(--font-color);
 }
 
 .more-reasons-to-join{
     margin: 1.5rem auto;
     width: 60%; 
+}
+
+.reasons-container{
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+
+}
+
+.reason{
+    padding: 2rem;
+    width: 15rem; 
+    height: 17rem;
+    border-radius: 20px; 
+
+    background: linear-gradient(to right, var(--third-color), var(--fourth-color));
+}
+
+.reason p{
+    margin: 1rem 0; 
+
+    color: var(--font-color3)
 }
