--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
 }
 
 .header-container{
+    margin: 0; 
     width: 100%; 
     height: 55rem; 
 
@@ -56,13 +57,14 @@ body{
 
 .header-content{
     margin: auto;
+    margin-top: 0;
     width: 100%;
     height: 55rem;
     
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
 
@@ -73,7 +75,9 @@ body{
 
 
 .nav-bar{
+    margin-top: 0; 
     width: 100%;
+
 
     display: flex; 
     flex-direction: row;
@@ -195,6 +199,7 @@ body{
 
 .hero{
     margin-top: 10rem;
+    margin-bottom: 1rem;
     width: 35%;
 
     font-size: 1.5rem; 
