--- a/style.css
+++ b/style.css
@@ -477,7 +477,13 @@ footer{
 
 @media screen and (max-width: 1275px) {
     .header-container{
-        height: 40rem;
+        width: 100%;
+        height: 50rem;
+    }
+
+    .header-content{
+        width: 100%;
+        height: 50rem;
     }
 
     .hero{
@@ -485,7 +491,7 @@ footer{
     }
 
     .hero-img{
-        height: 40rem;
+        height: 50rem;
     }
 
     .nav-bar{
