Corrige input email (no se mostraba el texto que se escribía en el cuadro de texto)

--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@ h1{
 }
 
 .email-search-bar{
-    padding: 1rem 6.5rem; 
+    padding: 1rem;
+    width: 25rem;  
     border: solid 1px var(--emphasis-color2); 
     border-radius: 5px;
     
@@ -544,8 +545,10 @@ footer{
     }
 
     .email-search-bar{
-        width: 2.5rem; 
+        width: 90%; 
         font-size: 1rem;
+        text-align: start;
+        box-sizing: border-box;
     }
 
     .more-info{
